Closed
Bug 630180
Opened 15 years ago
Closed 15 years ago
###!!! ASSERTION: No parent accessible where we're not direct child of window: 'xpParentAcc', file .../msaa/nsAccessibleWrap.cpp, line 219
Categories
(Core :: Disability Access APIs, defect)
Tracking
()
RESOLVED
FIXED
mozilla2.0b12
People
(Reporter: davidb, Assigned: surkov)
Details
Attachments
(1 file)
|
3.19 KB,
patch
|
davidb
:
review+
davidb
:
approval2.0+
|
Details | Diff | Splinter Review |
Getting this assertion, probably because we have more windows than just tab documents.
| Assignee | ||
Comment 1•15 years ago
|
||
What's steps to reproduce?
| Assignee | ||
Comment 2•15 years ago
|
||
I see this assertion on application accessible
Assignee: nobody → surkov.alexander
Status: NEW → ASSIGNED
Attachment #514153 -
Flags: review?(bolterbugz)
Attachment #514153 -
Flags: approval2.0?
| Reporter | ||
Comment 3•15 years ago
|
||
Comment on attachment 514153 [details] [diff] [review]
patch
r+a=me nice.
Attachment #514153 -
Flags: review?(bolterbugz)
Attachment #514153 -
Flags: review+
Attachment #514153 -
Flags: approval2.0?
Attachment #514153 -
Flags: approval2.0+
| Assignee | ||
Comment 4•15 years ago
|
||
landed on 2.0 (fx4b12) - http://hg.mozilla.org/mozilla-central/rev/2b38350131d8
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla2.0b12
You need to log in
before you can comment on or make changes to this bug.
Description
•