Bug 630180 - ###!!! ASSERTION: No parent accessible where we're not direct child of window: 'xpParentAcc', file .../msaa/nsAccessibleWrap.cpp, r=davidb, a=davidb