accessible/src/base/nsAccessible.h
@@ -359,6 +359,8 @@ public:
   //////////////////////////////////////////////////////////////////////////////
   // Downcasting
 
+  inline bool IsApplication() const { return mFlags & eApplicationAccessible; }
+
   inline bool IsHyperText() const { return mFlags & eHyperTextAccessible; }
   nsHyperTextAccessible* AsHyperText();
 
@@ -505,8 +507,9 @@ protected:
    * @note keep these flags in sync with ChildrenFlags
    */
   enum AccessibleTypes {
-    eHyperTextAccessible = 1 << 2,
-    eTextLeafAccessible = 1 << 3
+    eApplicationAccessible = 1 << 2,
+    eHyperTextAccessible = 1 << 3,
+    eTextLeafAccessible = 1 << 4
   };
 
   //////////////////////////////////////////////////////////////////////////////
